--- a/src/Layout/Footer/footer.css
+++ b/src/Layout/Footer/footer.css
@@ -26,6 +26,11 @@
     justify-content: space-between;
 }
 
+.below-footer span:hover {
+    cursor: pointer;
+    border-bottom: 1px solid #70757a;
+}
+
 .left, .right {
     display: flex;
     flex-direction: row;
