--- a/src/Layout/Navbar/navbar.css
+++ b/src/Layout/Navbar/navbar.css
@@ -12,15 +12,31 @@
     margin-left: 15px;
 }
 
+.links span:hover {
+    cursor: pointer;
+    border-bottom: 1px solid ;
+}
+
 .nav-container img {
-    margin-left: 25px;
     width: 23px;
+    margin-bottom: -5px;
+}
+
+.apps-icon {
+    margin-left: 15px;
+    border-radius: 50%;
+    padding: 10px;
+}
+
+.apps-icon:hover {
+    cursor: pointer;
+    background-color: #f4f4f4;
 }
 
 .g-circle {
-    margin-left: 25px;
+    margin-left: 15px;
     background-color: #1a0dab;
-    height: 30px;
+    height: 33px;
     width: 33px;
     border-radius: 50%;
     display: flex;
@@ -28,6 +44,13 @@
     align-items: center;
     padding-top: 3px;
 }
+
+.g-circle:hover {
+    cursor: pointer;
+    box-shadow: 0 0 0 3px #e6e7e8;
+}
+
+
 
 .g-circle span {
     color: #ffffff;
@@ -60,6 +83,7 @@
     .nav-container img {
         margin-left: 15px;
         width: 20px;
+        border-radius: 50%;
     }
   }
 
